--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
+    "aws-sdk-client-mock": "^3.0.0",
     "esbuild": "^0.19.2",
     "eslint": "^8.47.0",
     "husky": "^8.0.3",
@@ -30,7 +31,7 @@
     "vitest": "^0.34.2"
   },
   "peerDependencies": {
-    "@aws-sdk/client-s3": "^3.395.0"
+    "@aws-sdk/client-s3": "^3.300.0"
   },
   "lint-staged": {
     "*.ts": [
