--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "strict": true,
-    "lib": ["es2021"],
+    "lib": ["ESNext"],
     "module": "Node16",
-    "target": "es2021",
+    "target": "ES2021",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
