--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "virtual-s3-filesystem",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "A virtual filesystem for processing AWS S3 files locally",
   "homepage": "https://github.com/ffxsam/virtual-s3-filesystem",
   "repository": {
@@ -22,6 +22,7 @@
   "author": "Sam Hulick <samh@reelcrafter.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/debug": "^4.1.10",
     "@types/mime-db": "^1.43.1",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
@@ -34,6 +35,9 @@
     "prettier": "^3.0.2",
     "typescript": "^5.1.6",
     "vitest": "^0.34.2"
+  },
+  "dependencies": {
+    "debug": "^4.3.4"
   },
   "peerDependencies": {
     "@aws-sdk/client-s3": "^3.300.0"
