--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "virtual-s3-filesystem",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A virtual filesystem for processing AWS S3 files locally",
   "homepage": "https://github.com/ffxsam/virtual-s3-filesystem",
   "repository": {
@@ -14,6 +14,7 @@
   ],
   "scripts": {
     "build": "pnpm lint && rm -rf dist && tsc && node build",
+    "dev": "esbuild src/index.ts --bundle --platform=node --outdir=dist --watch",
     "lint": "eslint . --ext .ts --ignore-pattern 'dist/**' --fix",
     "prepare": "husky install",
     "test": "vitest --run"
